[tool.poetry]
name = "borgdrone"
version = "0.0.0"
description = "Python bindings for Borg Backup"
authors = ["Ethan Paul <24588726+enpaul@users.noreply.github.com>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
plumbum = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
